# vps-meter

./: .gitignore  Cargo.toml  README.md
src/: compare.rs  hardware.rs  main.rs  output.rs  recommendations.rs  score.rs  utils.rs
src/bench/: cpu.rs  disk.rs  mod.rs  net.rs  ram.rs
