[package]
name = "vps-meter"
version = "0.4.0"
edition = "2021"

[dependencies]
sysinfo = "0.30"
reqwest = { version = "0.11", features = ["blocking"] }
aes = "0.8"
sha2 = "0.10"
rayon = "1.8"
cipher = "0.4"
clap = { version = "4.4", features = ["derive"] }
tempfile = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"